Part One California Project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,142 @@
 </head>
 
 <body>
-
+  <header>
+    <section class="head-section">
+      <div class="head-intro">
+        <p>Elephant presents</p>
+        <h1>CALIFORNIA <span>CALLING</span></h1>
+        <p>Dedicated to the communities affected by the 2018 wildfires.</p>
+      </div>
+      <div class="head-button-logo">
+        <img src="./assets/imgs/logo.svg" alt="Logo">
+        <button>RSVP</button>
+      </div>
+    </section>
+  </header>
+  <main>
+    <section class="intro-section">
+      <article>
+        <h1>Last year, nearly 2
+          million acres were
+          devastated by the
+          deadliest, most
+          destructive wildfires in
+          California history.</h1>
+      </article>
+      <article>
+        <div class="article-p">
+          <p>Wildfires</p>
+          <h2>8,527</h2>
+        </div>
+        <div class="article-p">
+          <p>Insurance Claim Damages</p>
+          <h2>$12B</h2>
+        </div>
+        <div class="article-p">
+          <p>Acres</p>
+          <h2>1,893,913</h2>
+        </div>
+      </article>
+    </section>
+    <section class="picture-wall-section">
+      <article class="glide-out">
+        <img src="./assets/imgs/action1.jpeg" alt="Action1">
+      </article>
+      <article>
+        <img src="./assets/imgs/action2.jpeg" alt="Action2">
+        <div>
+          <h2>Stuck in
+            the middle.</h2>
+          <p>Surrounded by smoke and inspired by the communities’ resilience, our design team reimagined the California
+            Grizzly and
+            used it to create custom tees, pins and posters.</p>
+        </div>
+        <img src="./assets/imgs/action3.jpeg" alt="Action3">
+      </article>
+      <article>
+        <img src="./assets/imgs/action4.jpeg" alt="Action4">
+        <img src="./assets/imgs/action5.jpeg" alt="Action5">
+      </article>
+      <article>
+        <img src="./assets/imgs/action6.jpeg" alt="Action6">
+        <div>
+          <p>Our t-shirts (kids and adult sizes), pins, and posters will be available for purchase at our exclusive
+            pop-up shop
+            during our SF Design Week Studio Crawl this Friday, June 21. You can choose what amount to donate. All
+            proceeds will go
+            to the American Red Cross to help the communities that are still displaced.</p>
+        </div>
+        <img src="./assets/imgs/action7.jpeg" alt="Action7">
+      </article>
+    </section>
+    <section class="golden-bear-section">
+      <article>
+        <p>001</p>
+        <div class="bear-article">
+          <h2>The
+            Golden
+            Bear</h2>
+          <div class="golden-bear-text">
+            <p>This design is all about the resilience of California to overcome difficult situations and come out
+              stronger than
+              before. It’s a flip of the UNC Tarheel mascot with added elements like the California poppy.</p>
+            <p>— Kevin Lam, Artist</p>
+          </div>
+        </div>
+      </article>
+      <article>
+        <div class="golden-bear-images">
+          <img src="./assets/imgs/goldenbear.png" alt="Golden Bear">
+          <img src="./assets/imgs/gb2.png" alt="gb2">
+          <img src="./assets/imgs/cc-circle-2.png" alt="Circle">
+        </div>
+      </article>
+    </section>
+    <section class="poppy-bear-section">
+      <p>002</p>
+      <article>
+        <h2>The Poppy Bear</h2>
+        <div class="poppy-bear-text">
+          <p>This design is inspired by the quote ‘grow through what you go through’ and represents the strength of
+            Californians and
+            how we will continue to thrive, regardless of what knocks us down.</p>
+          <p>— Alyssa Wigant, Artist</p>
+        </div>
+      </article>
+      <article>
+        <div class="poppy-bear-images">
+          <img src="./assets/imgs/pb3.png" alt="pb3">
+          <img src="./assets/imgs/rosebear.png" alt="Rose Bear">
+        </div>
+      </article>
+    </section>
+  </main>
+  <footer>
+    <img src="./assets/imgs/line.svg" alt="">
+    <section class="footer-text">
+      <article>
+        <p>Join us</p>
+        <p>Mark your calendar for our SF Design Week Studio Crawl. In addition to custom swag, we’ll also have a DJ, a
+          mixologist,
+          and other cool surprises we can’t tell you about yet.</p>
+        <button>RSVP</button>
+      </article>
+      <article>
+        <div class="left-infos">
+          <img src="./assets/imgs/fb.png" alt="fb">
+          <img src="./assets/imgs/ig.png" alt="ig">
+          <img src="./assets/imgs/li.png" alt="">
+          <p>A SF Design Week project</p>
+          <p>2019</p>
+        </div>
+        <div class="right-infos">
+          <img src="./assets/imgs/san-francisco.png" alt="San Francisco">
+          <img src="./assets/imgs/red-cross.png" alt="red-cross">
+        </div>
+      </article>
+    </section>
+  </footer>
 </body>
 
 </html>
