--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         <div class="golden-bear-images">
           <img src="./assets/imgs/goldenbear.png" alt="Golden Bear">
           <img src="./assets/imgs/gb2.png" alt="gb2">
+        </div>
+        <div class="overflow">
           <img src="./assets/imgs/cc-circle-2.png" alt="Circle">
         </div>
       </article>
@@ -121,7 +123,7 @@
     </section>
   </main>
   <footer>
-    <img src="./assets/imgs/line.svg" alt="">
+    <!-- <img src="./assets/imgs/line.svg" alt=""> -->
     <section class="footer-text">
       <article>
         <p>Join us</p>
