Final Project version 1.0

--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
     </section>
   </main>
   <footer>
-    <!-- <img src="./assets/imgs/line.svg" alt=""> -->
+    <section class="moving-bar">
+      <img src="./assets/imgs/line.svg" alt="white line">
+      <p>JUNE 21, <span>2019</span> JUNE 21, <span>2019</span> JUNE 21, <span>2019</span></p>
+    </section>
     <section class="footer-text">
       <article>
         <p>Join us</p>
@@ -136,7 +139,7 @@
         <div class="left-infos">
           <img src="./assets/imgs/fb.png" alt="fb">
           <img src="./assets/imgs/ig.png" alt="ig">
-          <img src="./assets/imgs/li.png" alt="">
+          <img src="./assets/imgs/li.png" alt="li">
           <p>A SF Design Week project</p>
           <p>2019</p>
         </div>
